--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,15 +11,17 @@ gloo-timers = { version = "0.3.0", optional = true }
 wasm-bindgen = { version = "0.2.100", optional = true }
 wasm-bindgen-futures = { version = "0.4.50", optional = true }
 web-sys = { version = "0.3.77", features = ["Window", "Document", "MouseEvent"] }
-reqwest = { version = "0.12.15", optional = true }
-serde = { version = "1.0.219", optional = true }
+reqwest = { version = "0.12.15", features = ["brotli", "zstd", "gzip", "deflate"] }
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
+anyhow = "1.0.98"
 
 [features]
 default = ["web"]
 web = ["dioxus/web", "dep:gloo-timers", "dep:wasm-bindgen", "dep:wasm-bindgen-futures"]
 desktop = ["dioxus/desktop"]
 mobile = ["dioxus/mobile"]
-server = ["dioxus/server", "dep:reqwest", "dep:serde"]
+server = ["dioxus/server"]
 
 [profile]
 
