--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-dioxus = { version = "^0.6.3", features = ["fullstack"] }
+dioxus = { version = "^0.6.3", features = ["fullstack", "router"] }
 gloo-timers = { version = "0.3.0", optional = true }
 wasm-bindgen = { version = "0.2.100", optional = true }
 wasm-bindgen-futures = { version = "0.4.50", optional = true }
